--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,11 @@ jobs:
       with:
         python-version: '3.10.9'
         
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        
     - name: Install dependencies
-      run: make install
+      run: pip install -r requirements.txt
 
     - name: Run formatter
-      run: make format
+      run: black app/
       
     - name: Run tests
-      run: make test
+      run: pytest app/tests/ -v --cov=app
